fix(nav): Navbar breaks at 768px to 786px

--- a/common/app/Nav/nav.less
+++ b/common/app/Nav/nav.less
@@ -194,3 +194,19 @@ li.nav-avatar {
     }
   }
 }
+
+@media (min-width: 768px) and (max-width: 860px) {
+  .navbar {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .navbar-right {
+    margin-right: 0;
+  }
+
+  .navbar-nav > li > a {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
